2003-08-29  Gregory John Casamento <greg_casamento@yahoo.com>

	* NSToolbarItem.[hm]: Implemented copyWithZone: for NSCopying,
	removed an unused flag and shortened the flag names which were
	somewhat long.  Did some general cleanup.  Implemented standard
	items.
	
2003-08-28  Gregory John Casamento <greg_casamento@yahoo.com>

	* GSNibTemplates.m: Removed an extra release which was causing
	a segfault.  Added code to prevent calling the designated initializer
	when isInterfaceBuilder is defined.

2003-08-27  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/gsnd.m (main): Set daemon flag when forking.

2003-08-26  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.9

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GSNibTemplates.m: Minor corrections and bugfixes.

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GNUmakefile: Added new header to the list.
	* Source/GSNibTemplates.m: Added assertion to GSClassSwapper to 
	prevent it from being initialized with superClassName and className
	being the same.
	* Source/NSToolbar.m: Added some more code to properly implement 
	this class.
	* Source/NSToolbarItem.m: Added code to implement this class.
	* Headers/AppKit/NSToolbar.h: Added flags declaration.
	* Headers/AppKit/NSToolbarItem.h: Added attributes.
	* Headers/Additions/GNUStepGUI/GSToolbarView.h: Private class which
	will be used to display the toolbar in the window.
	
2003-08-22  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/gsnd.m (main): Close any open file descriptors so
	we can be a proper daemon.
	Fixes #4825

2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.[hm]: Added new template classes to a new file
	removed old templates and implemented GSClassSwapper, GSWindowTemplate,
	GSViewTemplate and etc.. to act as stand-in object in the 
	interface builder application.
	* NSBundleAdditions.m: Removed old template classes and moved some